# home-assistant-trmnl-entity-renderer-throwaway

./: .dockerignore  .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  run.bat  run.ps1  run.sh  test.bat  test.html  test.sh  test_multi_sensor.bat  test_multi_sensor.sh  test_status.sh  test_trmnl.bat  test_trmnl.sh
.github/workflows/: docker.yml  release.yml
scripts/: release.ps1  release.sh  test-docker.ps1  test-docker.sh
src/: main.rs
